Fix vertical alignment of SequenceProgress buttons.

--- a/source/scss/trackEditor/sequenceProgress.scss
+++ b/source/scss/trackEditor/sequenceProgress.scss
@@ -5,5 +5,6 @@
 
 	& button {
 		height: 100%;
+		vertical-align: top;
 	}
 }
